# SpoitableHRS

./: .gitignore  CLAUDE.md  LICENSE  THIRD_PARTY_LICENSES.txt  package.json  wrangler.jsonc
.github/workflows/: release.yml
cfw/: package.json  wrangler.toml
cfw/src/: index.js
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ble.rs  config.rs  main.rs  osc.rs  ws.rs
src-tauri/src/overlays/: glass.html  neon.html  pill.html  widget.html
src/lang/: en.json  ja.json
