[package]
name = "spoitable-hrs"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rosc = "0.10"
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
windows = { version = "0.61", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
